# gs_wi_19

./: .gitignore  README.md
1-Wire/: sensorList.h
BitMap/: CMakeLists.txt  a.out  analyse.c  analyse.h  build24BitStruct.c  build24BitStruct.h  build8BitStruct.c  build8BitStruct.h  buildStruct.c  buildStruct.h  expand.c  expand.h  file  general.h  main.c  output  output.c  output.h
BitMap/C_Files_fuer_Studierende/C_Files_fuer_Studierende/: MS_basetypes.h
BitMap/C_Files_fuer_Studierende/__MACOSX/C_Files_fuer_Studierende/: ._BMP_basis_lib.c  ._BMP_basis_lib.h  ._BMP_types.h  ._MS_basetypes.h
Drehgeber/: Konzept_Drehgeber.odt
Drehgeber/Drehgeber_Code/: general.h  gpio.c  gpio.h  main.c  output.c  output.h  state.c  state.h
